文档/操作系统/second/test.txt
p60.c: In function ‘main’:
p60.c:20:59: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   statue=pthread_create(&thread[i],NULL,print_hello_world,(void *)i);
                                                           ^
p60.c:22:5: error: expected ‘;’ before ‘{’ token
  i  {
     ^
p60.c:27:7: warning: passing argument 1 of ‘exit’ makes integer from pointer without a cast
  exit(NULL);
       ^
In file included from p60.c:2:0:
/usr/include/stdlib.h:543:13: note: expected ‘int’ but argument is of type ‘void *’
 extern void exit (int __status) __THROW __attribute__ ((__noreturn__));
             ^
